services/bdev/mirror/mirror-svc-deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mirror
  namespace: bdev
  labels:
    app: mirror
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: mirror
    tier: frontend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mirror
  namespace: bdev
  labels:
    app: mirror
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mirror
        tier: frontend
    spec:
      containers:
        - name: mirror
          image: nginx:alpine
          ports:
            - containerPort: 80
          VolumeMounts:
            - name: www-data
              mountPath: /usr/share/nginx/html
              readOnly: true
            - name: repositories
              mountPath: /mirror
              readOnly: true
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              readOnly: true
              subPath: default.conf
      volumes:
        - name: www-data
          hostPath:
            path: /hosthome/bdev/services/bdev/mirror/html
        - name: repositories
          hostPath:
            path: /storage/mirror
        - name: nginx-config
          configMap:
            name: mirror-nginx-config
